syntax = "proto3";

package api;

option go_package = "grpc.generated";

service Converter {
  rpc DownloadArchive (DownloadArchiveRequest) returns (DownloadArchiveResponse) {}
  rpc QueueFile (QueueFileRequest) returns (QueueFileResponse) {}
}

message DownloadArchiveRequest {
  string uid = 1;
}

message DownloadArchiveResponse {
  string bytes = 1;
  string filename = 2;
  int64 processed = 3;
  string uid = 4;
}

message QueueFileRequest {
  string bytes = 1;
  string filename = 2;
}

message QueueFileResponse {
  int64 count = 1;
  string filename = 2;
  string status = 3;
  string uid = 4;
}
